# sprobe

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
sprobe/: __init__.py  __main__.py  cli.py  orchestrator.py  playbook_runner.py
sprobe/domain/: __init__.py  package_info.py  risk_verdict.py  scan_finding.py  severity.py
sprobe/fetching/: __init__.py  pypi_fetcher.py
sprobe/metadata/: __init__.py  pypi_metadata_analyzer.py  typosquat_detector.py
sprobe/patterns/: __init__.py  pattern_definition.py  pattern_loader.py
sprobe/patterns/builtin/code_execution/: ctypes_usage.toml  subprocess_spawn.toml
sprobe/patterns/builtin/file_access/: env_file_read.toml  (+3 more)
sprobe/ports/: __init__.py  metadata_provider.py  package_fetcher.py  sandbox_runner.py  static_analyzer.py
sprobe/reporting/: __init__.py  terminal_reporter.py
sprobe/sandbox/: __init__.py  bwrap_runner.py  honeypot_injector.py  strace_parser.py
sprobe/scoring/: __init__.py  risk_scorer.py
sprobe/static_analysis/: __init__.py  ast_analyzer.py  ast_scanner.py  regex_scanner.py
tests/domain/: test_risk_verdict.py  test_severity.py
tests/metadata/: test_pypi_metadata_analyzer.py  test_typosquat_detector.py
tests/patterns/: test_pattern_loader.py
tests/sandbox/: test_honeypot_injector.py
tests/scoring/: test_risk_scorer.py
tests/static_analysis/: test_ast_scanner.py  test_regex_scanner.py
threat_playbooks/clean_package/clean_package/: __init__.py
threat_playbooks/delayed_payload/delayed_payload/: __init__.py
threat_playbooks/exfiltrates_env/exfiltrates_env/: __init__.py
threat_playbooks/honeypot_trigger/honeypot_trigger/: __init__.py
threat_playbooks/obfuscated_exec/obfuscated_exec/: __init__.py
threat_playbooks/setup_py_backdoor/: setup.py
threat_playbooks/setup_py_backdoor/setup_py_backdoor/: __init__.py
threat_playbooks/steals_ssh_key/steals_ssh_key/: __init__.py
(+5 files in other folders)
