[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprobe"
version = "0.1.3"
description = "Zero-trust Python package security scanner. Analyzes PyPI packages for malicious behavior before installation."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "PyAutoML" },
]
keywords = ["security", "supply-chain", "pypi", "malware", "scanner", "zero-trust"]

# Zero runtime dependencies — uses only Python stdlib
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/pyautoml/sprobe"
Repository = "https://github.com/pyautoml/sprobe"
"Bug Tracker" = "https://github.com/pyautoml/sprobe/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "black>=24.0",
    "isort>=5.13",
    "bandit>=1.8",
]

[project.scripts]
sprobe = "sprobe.cli:main"

# TOML patterns live inside sprobe/patterns/builtin/ — hatchling picks them up automatically
[tool.hatch.build.targets.wheel]
packages = ["sprobe"]

[tool.hatch.build.targets.sdist]
include = ["sprobe/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:logfire -p no:deepeval"

[tool.bandit]
exclude_dirs = ["tests", "threat_playbooks"]
